# eurora

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  .prettierrc.mjs  ACTIVITY_REWRITE.md  ANALYSIS.md  Cargo.toml  LICENSE  LICENSE-APACHE-2.0  LICENSE.md  README.md  buf.gen.yaml  docker-compose.yml  eslint.config.js  flake.nix  justfile  output-parsers-migration-plan.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  polyglot  rust-toolchain.toml  tsconfig.json  turbo.json  vercel.json
crates/app/eur-activity/: Cargo.toml  README.md
crates/app/eur-activity-2/: Cargo.toml
crates/app/eur-activity-2/src/: config.rs  error.rs  lib.rs  types.rs
crates/app/eur-activity-2/src/assets/: article.rs  default.rs  twitter.rs
crates/app/eur-activity-2/src/snapshots/: article.rs  mod.rs  twitter.rs  youtube.rs
crates/app/eur-activity/docs/: README.md  architecture-overview.md  critical-issues-analysis.md  implementation-roadmap.md  phase1-implementation-plan.md  testing-strategy.md
crates/app/eur-activity/examples/: asset_saving.rs  extensible_activity_system.rs
crates/app/eur-activity/src/: browser_activity.rs  browser_factory.rs  config.rs  default_activity.rs  default_factory.rs  default_strategy.rs  encryption.rs  error.rs  lib.rs  processes.rs  registry.rs  storage.rs  strategy_factory.rs  strategy_registry.rs  strategy_selector.rs  strategy_wrapper.rs  types.rs  utils.rs
crates/app/eur-conversation/: Cargo.toml
crates/app/eur-conversation/src/: lib.rs
crates/app/eur-encrypt/: Cargo.toml
crates/app/eur-encrypt/src/: error.rs  lib.rs
crates/app/eur-native-messaging/: Cargo.toml  build.rs
crates/app/eur-native-messaging/docs/: README.md  corrected-analysis.md  corrected-issues-list.md  critical-analysis.md  implementation-plan-phase1.md  implementation-plan-phase2.md  implementation-status-phase1.md  implementation-status-phase2.md  issues-list.md  recommended-fixes.md
crates/app/eur-native-messaging/src/: asset_context.rs  asset_converter.rs  context.rs  converter.rs  error.rs  lib.rs  main.rs  server.rs  server_n.rs  snapshot_context.rs  snapshot_converter.rs  types.rs  utils.rs
crates/app/eur-personal-db/: Cargo.toml
crates/app/eur-personal-db/src/: custom_converter.rs  db.rs  dto.rs  lib.rs  schema.rs  types.rs
crates/app/eur-screen-capture/: .gitignore  Cargo.toml  README.md
crates/app/eur-screen-capture/src/: lib.rs  main.rs
crates/app/eur-search/: Cargo.toml
crates/app/eur-search/src/: document.rs  lib.rs  linux.rs
crates/app/eur-secret/: Cargo.toml
crates/app/eur-secret/src/: secret.rs
crates/app/eur-settings/: Cargo.toml
crates/app/eur-settings/assets/: defaults.jsonc
crates/app/eur-settings/src/: hotkey.rs  hover.rs  lib.rs  persistence.rs  settings.rs  telemetry.rs  watch.rs
crates/app/eur-tauri/: .env.example  .gitignore  Cargo.toml  build.rs  fragment.wxs  tauri.conf.json  tauri.conf.nightly.json  tauri.conf.release.json  tauri.conf.test.json
crates/app/eur-tauri/capabilities/: desktop.json  main.json
crates/app/eur-tauri/hosts/: mac.native-messaging.json  windows.firefox.native-messaging.json  windows.native-messaging.json
crates/app/eur-tauri/icons/: icon.icns
crates/app/eur-tauri/src/: auth.rs  focus_tracker.rs  keyring_service.rs  launcher.rs  lib.rs  main.rs  shared_types.rs  system_procedures.rs  util.rs  window.rs  window_procedures.rs
crates/app/eur-timeline/: Cargo.toml
crates/app/eur-timeline/examples/: advanced.rs  simple.rs  test_windows_focus.rs
crates/app/eur-timeline/src/: activity.rs  asset_strategy.rs  browser_state.rs  collector.rs  config.rs  db.rs  error.rs  focus_tracker.rs  lib.rs  manager.rs  old_focus_tracker.rs  storage.rs
crates/app/eur-user/: Cargo.toml
crates/app/eur-user/src/: auth.rs  controller.rs  lib.rs  storage.rs  user.rs
crates/app/eur-vision/: .gitignore  Cargo.toml
crates/app/eur-vision/examples/: capture.rs  capture_and_ocr.rs  capture_region.rs
crates/app/eur-vision/src/: lib.rs
crates/app/euro-activity/: Cargo.toml
crates/app/euro-activity/src/: assets.rs  config.rs  error.rs  lib.rs  snapshots.rs  storage.rs  strategies.rs  tool_backend.rs  types.rs  utils.rs
crates/app/euro-api-codegen/: Cargo.toml
crates/app/euro-api-codegen/src/: main.rs
crates/app/euro-assets/: Cargo.toml
crates/app/euro-assets/src/: error.rs  lib.rs  manager.rs
crates/app/euro-auth/: Cargo.toml  build.rs
crates/app/euro-auth/src/: client.rs  error.rs  events.rs  interceptor.rs  lib.rs  manager.rs  secret_store.rs  tauri.rs  tokens.rs
crates/app/euro-bridge/: Cargo.toml
crates/app/euro-bridge-adapters/: Cargo.toml
crates/app/euro-bridge-adapters/src/: client.rs  lib.rs
crates/app/euro-bridge-protocol/: Cargo.toml
crates/app/euro-bridge-protocol/src/: codegen.rs  error.rs  frame.rs  lib.rs  ts_fixup.rs
crates/app/euro-bridge/src/: lib.rs  outbound.rs  process_name.rs  registry.rs  router.rs  server.rs  service.rs  websocket.rs
crates/app/euro-bridge/tests/: websocket_smoke.rs  ws_roundtrip.rs
crates/app/euro-browser/: Cargo.toml
crates/app/euro-browser/src/: codegen.rs  lib.rs  main.rs  parent_pid.rs  process_name.rs  server.rs  types.rs  utils.rs
crates/app/euro-browser/tests/: ws_roundtrip.rs
crates/app/euro-chat-client/: Cargo.toml
crates/app/euro-chat-client/src/: chat_models.rs  lib.rs
crates/app/euro-codegen/: Cargo.toml
crates/app/euro-codegen/src/: main.rs
crates/app/euro-conversation/: Cargo.toml
crates/app/euro-conversation/src/: error.rs  lib.rs  manager.rs  types.rs
crates/app/euro-encrypt/: Cargo.toml
crates/app/euro-encrypt/src/: error.rs  lib.rs
crates/app/euro-endpoint/: Cargo.toml  build.rs
crates/app/euro-endpoint/src/: error.rs  lib.rs
crates/app/euro-fs/: Cargo.toml
crates/app/euro-fs/src/: lib.rs
crates/app/euro-mobile/: .env.example  .gitignore  Cargo.toml  build.rs  tauri.android-dev.conf.json  tauri.conf.json
crates/app/euro-mobile/capabilities/: main.json
crates/app/euro-mobile/src/: error.rs  lib.rs  main.rs  procedures.rs  setup.rs  shared_types.rs
(+2269 files in other folders)
