[workspace]
resolver = "2"
members = [
  "crates/app/euro-*",
  "crates/backend/euro-*",
  "crates/common/agent-chain",
  "crates/common/agent-chain-core",
  "crates/common/agent-chain-eurora",
  "crates/common/agent-chain-macros",
  "crates/common/agent-graph",
  "crates/common/agent-graph-macros",
  "crates/common/euro-*",
]

[workspace.package]
authors = ["Eurora Labs <contact@eurora-labs.com>"]
edition = "2024"
homepage = "https://www.eurora-labs.com"
repository = "https://github.com/eurora-labs/eurora"
license = "Functional Source License"
license-file = "LICENSE.md"

[workspace.dependencies]
agent-chain = { path = "crates/common/agent-chain" }
agent-chain-core = { path = "crates/common/agent-chain-core" }
agent-chain-eurora = { path = "crates/common/agent-chain-eurora" }
agent-chain-macros = { path = "crates/common/agent-chain-macros" }
agent-graph = { path = "crates/common/agent-graph" }
agent-graph-macros = { path = "crates/common/agent-graph-macros" }
anyhow = "1.0.99"
async_from = "0.2.0"
async-trait = "0.1.89"
base64 = "0.22.1"
bstr = "1.12.1"
cfg-if = "1.0.4"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0"
enum_dispatch = "0.3.13"
euro-activity = { path = "crates/app/euro-activity" }
euro-auth = { path = "crates/common/euro-auth" }
euro-auth-service = { path = "crates/backend/euro-auth-service" }
euro-encrypt = { path = "crates/app/euro-encrypt" }
euro-focus = { path = "crates/common/euro-focus" }
euro-fs = { path = "crates/common/euro-fs" }
euro-llm = { path = "crates/common/euro-llm" }
euro-monolith = { path = "crates/backend/euro-monolith" }
euro-native-messaging = { path = "crates/app/euro-native-messaging" }
euro-ocr = { path = "crates/common/euro-ocr" }
euro-ocr-service = { path = "crates/backend/euro-ocr-service" }
euro-personal-db = { path = "crates/app/euro-personal-db" }
euro-prompt-kit = { path = "crates/common/euro-prompt-kit" }
euro-prompt-service = { path = "crates/backend/euro-prompt-service" }
euro-proto = { path = "crates/common/euro-proto" }
euro-proto-client = { path = "crates/common/euro-proto-client" }
euro-remote-db = { path = "crates/backend/euro-remote-db" }
euro-screen-position = { path = "crates/app/euro-screen-position" }
euro-secret = { path = "crates/app/euro-secret" }
euro-settings = { path = "crates/app/euro-settings" }
euro-storage = { path = "crates/app/euro-storage" }
euro-tauri = { path = "crates/app/euro-tauri" }
euro-timeline = { path = "crates/app/euro-timeline" }
euro-update-service = { path = "crates/backend/euro-update-service" }
euro-user = { path = "crates/app/euro-user" }
euro-vision = { path = "crates/app/euro-vision" }
futures = { version = "0.3.31" }
http-body = "1.0.1"
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
image = { version = "0.25.9", default-features = false, features = [
  "jpeg",
  "png",
] }
indexmap = "2.12"  # collapse 2.10, 1.9
insta = "1.41.1"
keyring = { version = "3.6.3", default-features = false, features = [
  "apple-native",
  "crypto-rust",
  "linux-native",
  "windows-native",
] }
log = "0.4"
once_cell = "1.21"
parking_lot = "0.12.5"
posthog-rs = "0.3.7"
prost = "0.14"
prost-types = "0.14"
rand = "0.9.2"
regex-syntax = "0.8"  # collapse 0.8, 0.6
rustix = "1.0.8"  # collapse 0.38, 1.0, 0.38(build)
sentry = { version = "0.46.0" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_json_lenient = "0.2.4"
specta = { version = "=2.0.0-rc.22" }
strum = "0.27.2"
strum_macros = "0.27.2"
syn = "2.0"  # collapse 2.0.101, 1.0.109, 1.0.109(build)
tempfile = "3.23"
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false }
tokio-stream = "0.1"
toml = "0.9.8"
toml_edit = "0.23.7"  # collapse 0.22, 0.20, 0.19
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url = "2.5.4"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[workspace.metadata.cargo-machete]
ignored = ["prost", "prost-types"]

[profile.bench]
opt-level = 3
lto = false
codegen-units = 256

[profile.dev]
overflow-checks = false
incremental = true

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = "s"  # Optimize for binary size
debug = false  # Enable debug symbols, for profiling
lto = true  # Enables link to optimizations
codegen-units = 1  # Compile crates one after another so the compiler can optimize better
