[workspace]
resolver = "2"
members = [
  "crates/app/euro-*",
  "crates/backend/be-auth-core",
  "crates/backend/be-auth-grpc",
  "crates/backend/euro-*",
  "crates/common/agent-chain",
  "crates/common/agent-chain-core",
  "crates/common/agent-chain-eurora",
  "crates/common/agent-chain-macros",
  "crates/common/agent-graph",
  "crates/common/agent-graph-macros",
  # "crates/common/activity-models",
  "crates/common/asset-models",
  "crates/common/auth-core",
  "crates/common/euro-*",
  "crates/common/focus-tracker",
  "crates/common/focus-tracker-core",
]

[workspace.package]
edition = "2024"
homepage = "https://www.eurora-labs.com"
repository = "https://github.com/eurora-labs/eurora"
license = "Functional Source License"
license-file = "LICENSE.md"

[workspace.dependencies]
agent-chain = { path = "crates/common/agent-chain" }
agent-chain-core = { path = "crates/common/agent-chain-core" }
agent-chain-eurora = { path = "crates/common/agent-chain-eurora" }
agent-chain-macros = { path = "crates/common/agent-chain-macros" }
agent-graph = { path = "crates/common/agent-graph" }
agent-graph-macros = { path = "crates/common/agent-graph-macros" }
anyhow = "1.0.99"
# activity-models = { path = "crates/common/activity-models" }
asset-models = { path = "crates/common/asset-models" }
async_from = "0.2.0"
async-trait = "0.1.89"
auth-core = { path = "crates/common/auth-core" }
base64 = "0.22.1"
be-auth-core = { path = "crates/backend/be-auth-core" }
be-auth-grpc = { path = "crates/backend/be-auth-grpc" }
bstr = "1.12.1"
cfg-if = "1.0.4"
chrono = "0.4.41"
dirs = "6.0"
dotenv = "0.15.0"
enum_dispatch = "0.3.13"
euro-activity = { path = "crates/app/euro-activity" }
euro-activity-service = { path = "crates/backend/euro-activity-service" }
euro-assets-service = { path = "crates/backend/euro-assets-service" }
euro-auth-service = { path = "crates/backend/euro-auth-service" }
euro-encrypt = { path = "crates/app/euro-encrypt" }
euro-fs = { path = "crates/common/euro-fs" }
euro-monolith = { path = "crates/backend/euro-monolith" }
euro-native-messaging = { path = "crates/app/euro-native-messaging" }
euro-personal-db = { path = "crates/app/euro-personal-db" }
euro-prompt-kit = { path = "crates/common/euro-prompt-kit" }
euro-prompt-service = { path = "crates/backend/euro-prompt-service" }
euro-proto = { path = "crates/common/euro-proto" }
euro-proto-client = { path = "crates/common/euro-proto-client" }
euro-remote-db = { path = "crates/backend/euro-remote-db" }
euro-screen-position = { path = "crates/app/euro-screen-position" }
euro-secret = { path = "crates/app/euro-secret" }
euro-settings = { path = "crates/app/euro-settings" }
euro-storage = { path = "crates/app/euro-storage" }
euro-tauri = { path = "crates/app/euro-tauri" }
euro-timeline = { path = "crates/app/euro-timeline" }
euro-update-service = { path = "crates/backend/euro-update-service" }
euro-user = { path = "crates/app/euro-user" }
euro-vision = { path = "crates/app/euro-vision" }
focus-tracker = { path = "crates/common/focus-tracker" }
focus-tracker-core = { path = "crates/common/focus-tracker-core", version = "0.0.2" }
futures = "0.3.31"
http-body = "1.0.1"
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
image = "0.25.9"
indexmap = "2.12"  # collapse 2.10, 1.9
insta = "1.41.1"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
keyring = "3.6.3"
log = "0.4"
once_cell = "1.21"
parking_lot = "0.12.5"
posthog-rs = "0.3.7"
prost = "0.14"
prost-types = "0.14"
rand = "0.9.2"
regex-syntax = "0.8"  # collapse 0.8, 0.6
rustix = "1.1.3"  # collapse 0.38, 1.0, 0.38(build)
sentry = "0.46.0"
serde = "1.0"
serde_json = "1.0"
serde_json_lenient = "0.2.4"
sha2 = "0.10.9"
specta = "=2.0.0-rc.22"
strum = "0.27.2"
strum_macros = "0.27.2"
syn = "2.0"  # collapse 2.0.101, 1.0.109, 1.0.109(build)
tempfile = "3.24"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-stream = "0.1"
toml = "0.9.10"
toml_edit = "0.23.10"  # collapse 0.22, 0.20, 0.19
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.4"
uuid = "1.19.0"

[workspace.metadata.cargo-machete]
ignored = ["prost", "prost-types"]

[profile.bench]
opt-level = 3
lto = false
codegen-units = 256

[profile.dev]
overflow-checks = false
incremental = true

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = "s"  # Optimize for binary size
debug = false  # Enable debug symbols, for profiling
lto = true  # Enables link to optimizations
codegen-units = 1  # Compile crates one after another so the compiler can optimize better
