[workspace]
resolver = "2"
members = [
  "crates/app/euro-*",
  "crates/backend/be-*",
  "crates/common/agent-chain",
  "crates/common/agent-chain-core",
  "crates/common/agent-chain-macros",
  "crates/common/agent-graph",
  "crates/common/agent-graph-macros",
  "crates/common/auth-core",
  "crates/common/focus-tracker",
  "crates/common/focus-tracker-core",
  "crates/common/proto-gen",
]

[workspace.package]
edition = "2024"
homepage = "https://www.eurora-labs.com"
repository = "https://github.com/eurora-labs/eurora"
license = "LicenseRef-Eurora-SUL-AND-Apache-2.0"

[workspace.dependencies]
agent-chain = { path = "crates/common/agent-chain" }
agent-chain-core = { path = "crates/common/agent-chain-core" }
agent-chain-macros = { path = "crates/common/agent-chain-macros" }
agent-graph = { path = "crates/common/agent-graph" }
agent-graph-macros = { path = "crates/common/agent-graph-macros" }
anyhow = "1.0.99"
argon2 = "0.5"
async_from = "0.2.0"
async-stream = "0.3.6"
async-trait = "0.1.89"
auth-core = { path = "crates/common/auth-core" }
axum = "0.8.8"
backon = "1.6"
base64 = "0.22.1"
be-activity-service = { path = "crates/backend/be-activity-service" }
be-asset = { path = "crates/backend/be-asset" }
be-asset-service = { path = "crates/backend/be-asset-service" }
be-auth-core = { path = "crates/backend/be-auth-core" }
be-auth-service = { path = "crates/backend/be-auth-service" }
be-authz = { path = "crates/backend/be-authz" }
be-conversation-service = { path = "crates/backend/be-conversation-service" }
be-encrypt = { path = "crates/backend/be-encrypt" }
be-local-settings = { path = "crates/backend/be-local-settings" }
be-local-settings-service = { path = "crates/backend/be-local-settings-service" }
be-monolith = { path = "crates/backend/be-monolith" }
be-payment-service = { path = "crates/backend/be-payment-service" }
be-remote-db = { path = "crates/backend/be-remote-db" }
be-storage = { path = "crates/backend/be-storage" }
be-update-service = { path = "crates/backend/be-update-service" }
blake2 = "0.10"
bon = "3.8.2"
bstr = "1.12.1"
casbin = { version = "2.20.0", default-features = false, features = [
  "incremental",
  "logging",
  "runtime-tokio"
] }
cfg-if = "1.0.4"
chrono = "0.4.43"
co-utils = { path = "crates/common/co-utils" }
dirs = "6.0"
dotenv = "0.15.0"
enum_dispatch = "0.3.13"
euro-activity = { path = "crates/app/euro-activity" }
euro-auth = { path = "crates/app/euro-auth" }
euro-browser = { path = "crates/app/euro-browser" }
euro-conversation = { path = "crates/app/euro-conversation" }
euro-debug = { path = "crates/app/euro-debug" }
euro-encrypt = { path = "crates/app/euro-encrypt" }
euro-endpoint = { path = "crates/app/euro-endpoint" }
euro-fs = { path = "crates/app/euro-fs" }
euro-native-messaging = { path = "crates/app/euro-native-messaging" }
euro-screen-position = { path = "crates/app/euro-screen-position" }
euro-secret = { path = "crates/app/euro-secret" }
euro-settings = { path = "crates/app/euro-settings" }
euro-storage = { path = "crates/app/euro-storage" }
euro-tauri = { path = "crates/app/euro-tauri" }
euro-timeline = { path = "crates/app/euro-timeline" }
euro-user = { path = "crates/app/euro-user" }
euro-vision = { path = "crates/app/euro-vision" }
focus-tracker = { path = "crates/common/focus-tracker" }
focus-tracker-core = { path = "crates/common/focus-tracker-core", version = "0.0.2" }
futures = "0.3.31"
futures-util = "0.3"
hex = "0.4.3"
humantime-serde = "1.1.1"
image = "0.25.9"
indexmap = "2.13"  # collapse 2.10, 1.9
insta = "1.41.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
keyring = "3.6.3"
once_cell = "1.21"
openidconnect = "4"
parking_lot = "0.12.5"
percent-encoding = "2"
posthog-rs = "0.3.7"
# prompt-kit = { path = "crates/common/prompt-kit" }
prost = "0.14"
prost-types = "0.14"
proto-gen = { path = "crates/common/proto-gen" }
rand = "0.9.2"
rand_distr = "0.5.0"
regex = "1.12.2"
regex-syntax = "0.8"  # collapse 0.8, 0.6
rustix = "1.1.3"  # collapse 0.38, 1.0, 0.38(build)
rustls = { version = "0.23", default-features = false }
sentry = "0.46.1"
serde = "1.0"
serde_json = "1.0"
serde_json_lenient = "0.2.4"
sha1 = "0.10"
sha2 = "0.10.9"
specta = "=2.0.0-rc.22"
strum = "0.27.2"
strum_macros = "0.27.2"
syn = "2.0"  # collapse 2.0.101, 1.0.109, 1.0.109(build)
tempfile = "3.24"
thiserror = "2.0.18"
tokio = "1.49.0"
tokio-stream = "0.1"
toml = "0.9.11"
toml_edit = "0.23.10"  # collapse 0.22, 0.20, 0.19
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
uuid = "1.20.0"

[workspace.metadata.cargo-machete]
ignored = ["prost", "prost-types"]

[profile.bench]
opt-level = 3
lto = false
codegen-units = 256

[profile.dev]
overflow-checks = false
incremental = true

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = "s"  # Optimize for binary size
debug = false  # Enable debug symbols, for profiling
lto = true  # Enables link to optimizations
codegen-units = 1  # Compile crates one after another so the compiler can optimize better
