[package]
name = "eur-activity"
version = "0.0.0"
edition = "2024"
authors.workspace = true
description = "Refactored activity system with enum-based type-safe design"

[dependencies]
eur-proto = { workspace = true }
eur-native-messaging = { workspace = true }
eur-fs = { workspace = true }
eur-secret = { workspace = true }
eur-encrypt = { workspace = true }

image.workspace = true
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, default-features = false, features = [
    "fs",
    "macros",
    "rt-multi-thread",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
humantime-serde = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["server", "tls-native-roots", "channel", "router"] }
async-trait = "0.1.89"
uuid = { workspace = true }
taurpc = { version = "0.5.1" }
specta = { workspace = true, features = ["derive", "function"] }
specta-typescript = { version = "0.0.9" }
ferrous-focus = { version = "0.2.5" }
tracing = { workspace = true }
ferrous-llm-core = { workspace = true, features = ["dynamic-image"] }
base64 = { workspace = true }
thiserror = { workspace = true }
regex = "1.11.2"
sha2 = "0.10.8"
hex = "0.4.3"
tempfile = "3.21.0"
enum_dispatch = "0.3.13"
dirs = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
default = []
compat = []  # Enable backward compatibility layer
