[package]
name = "eur-activity"
version = "0.0.0"
edition = "2024"
authors.workspace = true
description = "Refactored activity system with enum-based type-safe design"

[dependencies]
eur-proto = { workspace = true }
eur-native-messaging = { workspace = true }
eur-fs = { workspace = true }
eur-secret = { workspace = true }
eur-encrypt = { workspace = true }

image.workspace = true
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, default-features = false, features = [
    "fs",
    "macros",
    "rt-multi-thread",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
humantime-serde = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["server", "tls-native-roots", "channel", "router"] }
async-trait = { workspace = true }
uuid = { workspace = true }
taurpc = { version = "0.5.1" }
specta = { workspace = true, features = ["derive", "function"] }
specta-typescript = { version = "0.0.9" }
ferrous-focus = { workspace = true, features = ["async"] }
tracing = { workspace = true }
ferrous-llm-core = { workspace = true, features = ["dynamic-image"] }
base64 = { workspace = true }
thiserror = { workspace = true }
regex = "1.12.2"
sha2 = "0.10.8"
hex = "0.4.3"
tempfile = "3.23.0"
enum_dispatch = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
url = { version = "2.5.7" }
cfg-if = { workspace = true }
usvg = { version = "0.45", default-features = true }
tiny-skia = "0.11"
resvg = { version = "0.45" }
lazy_static = { version = "1.5.0" }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
default = []
compat = []  # Enable backward compatibility layer
