[package]
name = "eur-conversation"
version = "0.0.0"
edition = "2024"
authors = ["Eurora <eurora@company.com>"]
publish = false

[dependencies]
anyhow = "1.0.97"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std", "arbitrary_precision"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
tracing = "0.1.40"
thiserror = "1.0.51"
eur-proto = { path = "../../proto/eur-proto" }
eur-timeline = { path = "../eur-timeline" }
tokio = { version = "1.44.2", features = ["sync"] }
once_cell = "1.21.3"
tonic = { workspace = true }
prost = { workspace = true }
rusqlite = { version = "0.34.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
