[package]
name = "eur-encrypt"
version = "0.0.0"
edition = "2024"
authors.workspace = true
description = "Handle user encryption and related functionalities"

[dependencies]
eur-secret = { workspace = true }
orion = "0.17.11"
rand = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
zeroize = "1.8.1"
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
