[package]
name = "eur-encrypt"
version = "0.0.0"
edition = "2024"
authors.workspace = true
description = "Handle user encryption and related functionalities"

[dependencies]
eur-secret = { workspace = true }

rand = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
zeroize = { version = "1.8.2", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
hkdf = { version = "0.12.0" }
sha2 = { version = "0.10.0" }
chacha20poly1305 = { version = "0.10.0", features = ["std"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
