[package]
name = "eur-native-messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
eur-proto = { path = "../../proto/eur-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
once_cell = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
base64 = { workspace = true }
ctrlc = "3.4.6"
h2 = "0.4.8"
sentry = { workspace = true }
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[build-dependencies]
tonic-build = { workspace = true }

[lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"
