[package]
name = "eur-native-messaging"
version = "0.0.0"
edition = "2024"

[dependencies]
eur-proto = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
once_cell = { workspace = true }
tonic = { workspace = true, features = ["server", "tls-native-roots", "channel", "router"] }
prost = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
base64 = { workspace = true }
ctrlc = "3.4.7"
h2 = "0.4.12"
sentry = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
specta = { workspace = true, features = ["derive", "function", "export", "serde", "serde_json"] }
enum_dispatch = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[build-dependencies]
tonic-prost-build = { workspace = true }

[lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"
