[package]
name = "eur-native-messaging"
version = "0.0.0"
edition = "2024"
authors.workspace = true

[dependencies]
eur-proto = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
once_cell = { workspace = true }
tonic = { workspace = true, features = ["server", "tls-native-roots", "channel", "router"] }
prost = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
base64 = { workspace = true }
ctrlc = "3.5.1"
h2 = "0.4.12"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
sentry = { workspace = true, features = ["logs", "tracing"] }
specta = { workspace = true, features = ["derive", "function", "export", "serde", "serde_json"] }
specta-typescript = { version = "0.0.9" }
enum_dispatch = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
usvg = { version = "0.45", default-features = true }
tiny-skia = "0.11"
resvg = { version = "0.45" }
image.workspace = true


[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[build-dependencies]
tonic-prost-build = { workspace = true }

[lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"
