[package]
name = "eur-personal-db"
version = "0.1.0"
edition = "2024"
authors = ["Eurora <eurora@company.com>"]
description = "Eurora Personal DB"

[dependencies]
anyhow.workspace = true
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "uuid",
    "chrono",
    "migrate",
] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
futures = { workspace = true, features = ["std"] }
image = { workspace = true, features = [
    "jpeg",
    "png",
], default-features = false }
chrono = { workspace = true, features = ["serde"] }
sqlite-vec = "0.1.3"
tracing = { workspace = true }
zerocopy = { version = "0.8.25" }

serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"


tokio = { workspace = true, features = ["full", "tracing"] }
