[package]
name = "eur-personal-db"
version = "0.1.0"
edition = "2024"
authors = ["Eurora <eurora@company.com>"]
description = "Eurora Personal DB"

[dependencies]
anyhow.workspace = true
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "uuid",
    "chrono",
    "migrate",
] }
libsqlite3-sys = { version = "0.30.1", features = [
    "bundled-sqlcipher-vendored-openssl",
] }
futures = { workspace = true, features = ["std"] }
image = { workspace = true, features = [
    "jpeg",
    "png",
], default-features = false }
chrono = { workspace = true, features = ["serde"] }
sqlite-vec = "0.1.3"
tracing = { workspace = true }
zerocopy = { version = "0.8.26" }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
eur-secret = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
specta = { version = "=2.0.0-rc.22", features = [
    "derive",
    "function",
    "chrono",
] }


tokio = { workspace = true, features = ["full", "tracing"] }
