[package]
name = "eur-personal-db"
version = "0.0.0"
edition = "2024"
authors.workspace = true
description = "Eurora Personal DB"

[dependencies]
eur-secret = { workspace = true }

anyhow.workspace = true
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "uuid",
    "chrono",
    "migrate",
] }
libsqlite3-sys = { version = "0.30.1", features = [
    "bundled-sqlcipher-vendored-openssl",
] }
futures = { workspace = true, features = ["std"] }
image = { workspace = true, features = [
    "jpeg",
    "png",
], default-features = false }
chrono = { workspace = true, features = ["serde"] }
sqlite-vec = "0.1.3"
tracing = { workspace = true }
zerocopy = { version = "0.8.26" }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
specta = { workspace = true, features = [
    "derive",
    "function",
    "chrono",
] }
ferrous-llm-core = { workspace = true, features = ["specta"] }
tokio = { workspace = true, features = ["full", "tracing"] }
