[package]
name = "eur-screen-capture"
version = "0.1.0"
edition = "2024"
authors = ["Eurora <eurora@company.com>"]
description = "Screen and window capture utility using xcap"

[dependencies]
xcap = "0.3.3"
tokio = { workspace = true, default-features = false }
image.workspace = true
anyhow = "1.0.98"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
ctrlc = "3.4.7"
chrono = "0.4.41"
sysinfo = "0.35.1"
scap = "0.0.8"
