[package]
name = "eur-screen-capture"
version = "0.1.0"
edition = "2024"
authors = ["Eurora <eurora@company.com>"]
description = "Screen and window capture utility using xcap"

[dependencies]
xcap = { git = "https://github.com/AndreRoelofs/xcap.git", branch = "master" }
tokio = { workspace = true, default-features = false }
image.workspace = true
anyhow = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
ctrlc = "3.4.7"
chrono = { workspace = true }
sysinfo = "0.35.2"
scap = "0.0.8"
