[package]
name = "eur-search"
version = "0.1.0"
edition = "2024"
authors = ["Eurora <eurora@company.com>"]
description = "Unified search"

[dependencies]
serde = { workspace = true }
regex = "1.10.4"
tracing = { workspace = true }
# shell-words = "1.1.0"
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18.0", features = ["v3_24"] }
