[package]
name = "eur-secret"
version = "0.1.0"
edition = "2024"
authors = ["Eurora <eurora@company.com>"]
description = "Secret management for Eurora"

[dependencies]
serde = { workspace = true, features = ["std"] }
keyring = { workspace = true }
anyhow = { workspace = true }
tracing.workspace = true
