[package]
name = "eur-settings"
version = "0.0.0"
edition = "2024"
authors = ["Andre Roelofs andre@eurora-labs.com"]
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std", "arbitrary_precision"] }
serde_json_lenient = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
dirs = { workspace = true }
specta = { version = "=2.0.0-rc.22", features = ["derive", "function"] }
async_from = { workspace = true }
notify = { version = "8.2.0" }


eur-fs = { workspace = true }
eur-secret = { workspace = true }
eur-eurora-provider = { workspace = true }
eur-prompt-kit = { workspace = true }
