[package]
name = "eur-tauri"
version = "0.0.0"
edition = "2024"
authors = ["Eurora <andreroelofsai@gmail.com>"]
publish = false

[lib]
doctest = false
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "eur-tauri"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri-utils = "2.6.0"                                     # single entry removes second 8.6 s build
tauri-plugin-stronghold = "2.0.0"
anyhow = { workspace = true }
eur-secret = { path = "../eur-secret" }
eur-prompt-kit = { path = "../../common/eur-prompt-kit" }
# eur-auth = { path = "../../common/eur-auth" }
backtrace = { version = "0.3.75", optional = true }
# console-subscriber = "0.4.1"
reqwest = { version = "0.12.22", features = ["json", "native-tls"] }
serde.workspace = true
serde_json = { version = "1.0", features = ["std", "arbitrary_precision"] }
tauri = { version = "^2.7.0", features = ["unstable", "tray-icon"] }
tauri-plugin-dialog = "2.3.2"
tauri-plugin-fs = "2.4.1"
tauri-plugin-http = "2.5.1"
tauri-plugin-log = "2.6.0"
tauri-plugin-os = "2"
tauri-plugin-process = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-store = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.4.0"
eur-vision = { path = "../eur-vision" }
eur-screen-position = { path = "../eur-screen-position" }
image.workspace = true
parking_lot.workspace = true
log = "^0.4"
# The features here optimize for performance.
tokio = { workspace = true, features = ["rt-multi-thread", "parking_lot"] }
tokio-stream = { workspace = true }
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing-forest = { version = "0.2.0" }
open = "5"
url = "2.5.4"
dirs = "6.0.0"
eur-proto = { path = "../../proto/eur-proto" }
eur-timeline = { path = "../eur-timeline" }
eur-client-questions = { path = "../../proto/eur-client-questions" }
eur-client-grpc = { path = "../../proto/eur-client-grpc" }
# eur-conversation = { path = "../eur-conversation" }
eur-personal-db = { path = "../eur-personal-db" }
eur-native-messaging = { path = "../eur-native-messaging" }
eur-settings = { path = "../eur-settings" }
chrono = { workspace = true }
defer = "0.2.1"
futures = { workspace = true }
tonic = { workspace = true }
async-mutex = "1.4.1"
sentry = { workspace = true }
eur-activity = { path = "../eur-activity" }
lazy_static = "1.4.0"
pollster = "0.4"
specta = { version = "=2.0.0-rc.22", features = ["derive", "function"] }
specta-typescript = { version = "0.0.9" }
tauri-specta = { version = "2.0.0-rc.21", features = [
    "javascript",
    "typescript",
] }
taurpc = { version = "0.5.1" }
base64 = "0.22.1"
eur-proto-client = { workspace = true }
dotenv = "0.15.0"
eur-user = { workspace = true }
uuid.workspace = true
ferrous-llm-core = { version = "0.4.1" }
eur-eurora-provider = { path = "../../common/eur-eurora-provider" }
async_from = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-updater = "2"

[lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"

[features]
default = ["custom-protocol", "devtools"]
## A forwarding to all crates that have windows-specific adjustments for testing on non-Windows.
windows = []
devtools = ["tauri/devtools"]

# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

error-context = ["dep:backtrace"]
